@@ -35,15 +35,71 @@ Received market data is organized in so-called Packages. `PackageHeader` class r
 
 ### Docker Compose 
 
+```yaml
+version: "3"
+services:
+  timebase:
+    image: "finos/timebase-ce-server:6.1"    
+    stop_grace_period: 5m
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+    environment:
+      - JAVA_OPTS=
+        -Xms8g
+        -Xmx8g        
+        -XX:+HeapDumpOnOutOfMemoryError
+        -XX:HeapDumpPath=/timebase-home/timebase.hprof
+        -Xlog:gc=debug:file=/timebase-home/GClog-TimeBase.log:time,uptime,level,tags:filecount=5,filesize=100m
+    ports:
+      - 8011:8011
+    volumes:
+      - "./timebase-home:/timebase-home"
+
+  timebase-admin:
+    image: "epam/timebase-ws-server:latest"
+    environment:
+      - JAVA_OPTS=
+        -Xmx1g
+        -Dserver.port=8099
+        -Dtimebase.url=dxtick://timebase:8011
+        -Dserver.compression.enabled=true
+        -Dserver.compression.mime-types=text/html,text/css,application/javascript,application/json
+    ports:
+      - 8099:8099
+    depends_on:
+      - timebase
+
+  crypto-connectors:
+    image: "epam/timebase-crypto-connectors:0.1.4"
+    environment:
+      - JAVA_OPTS=
+        -Xmx1g
+        -Dserver.port=8055
+        -Dtimebase.url=dxtick://timebase:8011
+        -Dserver.compression.enabled=true
+        -Dserver.compression.mime-types=text/html,text/css,application/javascript,application/json
+    ports:
+      - 8055:8055
+    depends_on:
+      - timebase  
+```
 ### Gradle
 
 ## Developer Tutorials
 
-### How to Design Connector
+In this section we will describe the architecture of our single-WebSocket data connectors on the example of a Coinbase Data Connector and give you simple guidelines on how to create custom connectors within the terms of the suggested framework.
 
-### Parameters 
+### 1. Create Settings
 
-Connectors inherit configuration parameters declared in `DataConnectorSettings` class.
+Create settings class:
+
+* Inherit from `DataConnectorSettings`.
+* Annotate with `@ConnectorSettings("You Connector Name")`.
+* Add specific connector settings.
+
+Example of a [Coinbase Data Connector settings](https://github.com/epam/TimebaseCryptoConnectors/blob/01bbb8f3d9e3add9c0b710832a40afcc29e008a4/java/connectors/coinbase/src/main/java/com/epam/deltix/data/connectors/coinbase/CoinbaseConnectorSettings.java). 
 
 #### TimeBase Parameters
 
@@ -55,6 +111,8 @@ Connectors inherit configuration parameters declared in `DataConnectorSettings` 
 
 #### Connector Parameters 
 
+> Can be unique for each connector. 
+
 |Parameter|Description|Required|
 |---------|-----------|--------|
 |type|Data connector type. You can run multiple instances of each connector with different parameters (e.g. to read different set of instruments from different URLs or to save dta in different TimeBase streams). In this case, each instance of the connector will have a different name but share the same `type` e.g. coinbase.|no|
@@ -65,6 +123,36 @@ Connectors inherit configuration parameters declared in `DataConnectorSettings` 
 |model|Data model type.|yes|
 
 > Refer to [application.yaml](https://github.com/epam/TimebaseCryptoConnectors/blob/main/java/runner/src/main/resources/application.yaml) example.
+
+### 2. Create WS Feed 
+
+Create class inherited from `DataConnector<T>`:
+
+* Mark with [annotation](https://github.com/epam/TimebaseCryptoConnectors/blob/01bbb8f3d9e3add9c0b710832a40afcc29e008a4/java/connectors/coinbase/src/main/java/com/epam/deltix/data/connectors/coinbase/CoinbaseDataConnector.java#L7) `@Connector("You Connector Name")`
+* Implement method that creates factory of `WsFeed`. Refer to the [source code](https://github.com/epam/TimebaseCryptoConnectors/blob/01bbb8f3d9e3add9c0b710832a40afcc29e008a4/java/commons/src/main/java/com/epam/deltix/data/connectors/commons/DataConnector.java#L88). 
+
+```java
+protected abstract RetriableFactory<MdFeed> doSubscribe(
+MdModel.Options selected,
+CloseableMessageOutputFactory outputFactory,
+String... symbols);
+```
+
+### 3. Subscribe for Market Data and Parse It
+
+1. Inherit [SingleWsFeed](https://github.com/epam/TimebaseCryptoConnectors/blob/01bbb8f3d9e3add9c0b710832a40afcc29e008a4/java/connectors/coinbase/src/main/java/com/epam/deltix/data/connectors/coinbase/CoinbaseFeed.java#:~:text=public%20class%20CoinbaseFeed%20extends%20SingleWsFeed).
+2. Implement two methods of `SingleWsFeed`:
+
+    * `prepareSubscription` method that **subscribes** for the market data. Refer to the [source code](https://github.com/epam/TimebaseCryptoConnectors/blob/01bbb8f3d9e3add9c0b710832a40afcc29e008a4/java/commons/src/main/java/com/epam/deltix/data/connectors/commons/SingleWsFeed.java#:~:text=protected%20abstract%20void%20prepareSubscription(JsonWriter%20jsonWriter%2C%20String...%20symbols)%3B).
+
+    ```java
+    protected abstract void prepareSubscription(JsonWriter jsonWriter, String... symbols);
+    ```
+    * `onJson` method **to parse** the received data from exchange in JSON format. Refer to the [source code](https://github.com/epam/TimebaseCryptoConnectors/blob/01bbb8f3d9e3add9c0b710832a40afcc29e008a4/java/commons/src/main/java/com/epam/deltix/data/connectors/commons/SingleWsFeed.java#:~:text=protected%20abstract%20void%20onJson(CharSequence%20data%2C%20boolean%20last%2C%20JsonWriter%20jsonWriter)%3B).
+
+    ```java
+    protected abstract void onJson(CharSequence data, boolean last, JsonWriter jsonWriter);
+    ```
 
 ## Available Connectors
 
